@@ -1,0 +1,10 @@
+<!-- Login User -->
+<form action="[% links.base_uri %]login"
+     enctype="application/x-www-form-urlencoded"
+      method="post" name="login-user">
+   <input  class="pathname" name="username" type="textfield"
+           value="[% page.username %]">
+   <input  class="pathname" name="password" type="password">
+   <button class="btn btn-submit" name="_method" type="submit"
+           value="login">[% loc( 'Login' ) %]</button>
+</form>
